--- a/Flyingdarts.Backend.Signalling.OnDefault.csproj
+++ b/Flyingdarts.Backend.Signalling.OnDefault.csproj
@@ -15,10 +15,10 @@
     <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.6" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
     <PackageReference Include="AWSSDK.ApiGatewayManagementApi" Version="3.7.100.113" />
-    <PackageReference Include="Flyingdarts.Lambdas.Shared" Version="1.0.3" />
+    <PackageReference Include="Flyingdarts.Backend.Shared" Version="1.0.0" />
     <PackageReference Include="Flyingdarts.Persistence" Version="1.0.1" />
     <PackageReference Include="Flyingdarts.Shared" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.2.23128.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.3.23174.8" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".github\workflows\build-and-publish-lambda.yml" />
