--- a/Flyingdarts.Backend.Signalling.OnDefault.csproj
+++ b/Flyingdarts.Backend.Signalling.OnDefault.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,13 +12,14 @@
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.7" />
-    <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
-    <PackageReference Include="AWSSDK.ApiGatewayManagementApi" Version="3.7.100.129" />
-    <PackageReference Include="Flyingdarts.Backend.Shared" Version="1.0.0.4" />
-    <PackageReference Include="Flyingdarts.Persistence" Version="1.0.2.12" />
-    <PackageReference Include="Flyingdarts.Shared" Version="1.0.2.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.4.23259.5" />
+	  <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.7" />
+	  <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
+	  <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="5.0.3" />
+	  <PackageReference Include="Flyingdarts.Backend.Shared" Version="1.0.0.4" />
+	  <PackageReference Include="Flyingdarts.Persistence" Version="1.0.2.12" />
+	  <PackageReference Include="Flyingdarts.Shared" Version="1.0.2.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.4.23259.5" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.4.23259.5" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".github\workflows\build-and-publish-lambda.yml" />
