--- a/Flyingdarts.Backend.Signalling.OnDefault.csproj
+++ b/Flyingdarts.Backend.Signalling.OnDefault.csproj
@@ -15,6 +15,7 @@
 	  <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.7" />
 	  <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
 	  <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="5.0.3" />
+	  <PackageReference Include="AWSSDK.ApiGatewayManagementApi" Version="3.7.100.130" />
 	  <PackageReference Include="Flyingdarts.Backend.Shared" Version="1.0.0.4" />
 	  <PackageReference Include="Flyingdarts.Persistence" Version="1.0.2.12" />
 	  <PackageReference Include="Flyingdarts.Shared" Version="1.0.2.3" />
